# CreatorAppDuLich

./: .gitignore  README.md  SETUP.md  package.json  plan.md  plan_custom_album_frames.md
.claude/: settings.local.json
dulich-dashboard/: .env.example  .gitignore  next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
dulich-dashboard/app/: globals.css  layout.tsx
dulich-dashboard/components/: Sidebar.tsx
dulich-dashboard/lib/: auth.ts  claude.ts  db.ts  mock_db.json  mock_db.ts
dulich-desktop/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
dulich-desktop/src/: App.tsx  styles.css
dulich-desktop/src-tauri/: Cargo.toml  tauri.conf.json
dulich-desktop/src-tauri/icons/: icon.icns
dulich-desktop/src-tauri/src/: commands.rs  main.rs
dulich-pipeline/: .env.example  config.py  db_cli.py  main.py  requirements-pip.txt  requirements.txt  server.py
dulich-pipeline/agents/: brief_agent.py  caption_agent.py  image_agent.py  personal_video_agent.py  research_agent.py  script_agent.py  subtitle_agent.py
dulich-pipeline/graph/: news_pipeline.py  pipeline.py
dulich-pipeline/scratch/: check_latest_jobs.py  copy_assets.py  create_icons.py  debug_multipart.py  list_user_voices.py  seed_data.py  test_ass_conversion.py  test_assemble_request.py  test_burn_subtitles.py  test_db_update.py  test_elevenlabs.py  test_srt_no_emojis.py
dulich-pipeline/tests/: test_agents.py  test_config.py  test_graph.py  test_subtitle_agent.py  test_tools.py
dulich-pipeline/tools/: db.py  drive_uploader.py  frame_analyzer.py  (+12 more)
(+37 files in other folders)
